<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:ignore="MissingConstraints">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <LinearLayout
                android:id="@+id/test_one"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:background="@drawable/list_button"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.8">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:paddingLeft="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/figure_test_head"
                        android:textSize="16dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:layout_marginBottom="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/figure_test_title"
                        android:textSize="20dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="26dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_next_primary_color" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/test_two"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:background="@drawable/list_button"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/test_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.8">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:paddingLeft="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_test_head"
                        android:textSize="16dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:layout_marginBottom="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_test_title"
                        android:textSize="20dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_next_primary_color"
                        android:layout_marginRight="16dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/test_three"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:background="@drawable/list_button"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/test_two"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.8">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:paddingLeft="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depression_test_head"
                        android:textSize="16dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:layout_marginBottom="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depression_test_title"
                        android:textSize="20dp"
                        android:textColor="@color/colorTitlePrimaryDark"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_next_primary_color"
                        android:layout_marginRight="16dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>